Manage to use autosummary for scripts

--- a/docs/source/bpass_convertingND2_to_tif.ipynb
+++ b/docs/source/bpass_convertingND2_to_tif.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bpass, convert nd2 to tif"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -125,7 +133,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.-1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2bca6e04de126ee27e537a725aea4e29b7217d5382b64dc986168a89f8791df4"
+   }
   }
  },
  "nbformat": 4,
